# IGVC_2

./: .gitignore  DEPENDENCIES.md  FINAL_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERCEPTION_SETUP.md  QUICKSTART.md  QUICKSTART_PERCEPTION.sh  README.md  follow_waypoints.py  frames_2026-02-11_21.30.30.gv  igvc_course_waypoints.yaml  igvc_perception.rviz  launch_igvc_full.sh  launch_rviz_perception.sh  nav2_params_fused.yaml  nav2_params_no_map.yaml  navigate_igvc_course.py  run_igvc_course.sh  send_waypoint.sh  setup_orange.sh  waypoints.yaml
docs/: ARCHITECTURE.md  SETUP_GUIDE.md  TOPIC_GRAPH.md
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/launch/: mapping.launch.py
src/estop_ros/: CMakeLists.txt  README.md  package.xml
src/estop_ros/.github/workflows/: ci.yml
src/estop_ros/firmware/estop/: estop.ino
src/estop_ros/include/cmd_vel_override/: cmd_vel_override.h
src/estop_ros/launch/: estop_control.launch.xml
src/estop_ros/src/: cmd_vel_override.cpp
src/fast_odom_convert/: README.md  package.xml  setup.cfg  setup.py
src/fast_odom_convert/fast_odom_convert/: fast_odom_convert.py
src/orange_navigation/waypoint_manager/: manager_GUI.py
src/orange_navigation/waypoint_navigation/rviz_cfg/: waypoint_nav.rviz  waypoint_saver.rviz
src/orange_ros2/: orange_ros2.rosinstall
src/orange_ros2/orange_description/rviz2/: orange_robot.rviz
src/orange_ros2/orange_description/xacro/: orange_robot_simulation.gazebo  orange_robot_simulation.xacro
src/orange_ros2/orange_description/xacro/sensors/: oak_d_pro.xacro  simple_rgb_camera.xacro
src/orange_ros2/orange_gazebo/: CMakeLists.txt
src/orange_ros2/orange_gazebo/config/: nav2_params_fused.yaml  nav2_params_no_map.yaml
src/orange_ros2/orange_gazebo/config/waypoints/: igvc_waypoints.yaml
src/orange_ros2/orange_gazebo/launch/: igvc_autonomous.launch.xml  igvc_nav2_full.launch.xml  igvc_nav2_waypoints.launch.xml  igvc_perception_full.launch.xml  orange_igvc_simple.launch.xml  test_basic.launch.xml
src/orange_ros2/orange_perception/: package.xml  setup.cfg  setup.py
src/orange_ros2/orange_perception/launch/: perception.launch.xml
src/orange_ros2/orange_perception/orange_perception/: lane_detector.py  pointcloud_fusion.py
src/orange_ros2/orange_sensor_tools/: CMakeLists.txt  package.xml
src/orange_ros2/orange_sensor_tools/firmware/: LED.ino
src/orange_ros2/orange_sensor_tools/include/: led_node.hpp  wheel_imu_odom.hpp
src/orange_ros2/orange_sensor_tools/src/: led_node.cpp  wheel_imu_odom.cpp
src/pcd_convert/: README.md  package.xml  setup.cfg  setup.py
src/pcd_convert/launch/: pcd_convert.launch.py
src/pcd_convert/pcd_convert/: pcd_height_segmentation.py  pcd_rotation.py
